--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         
             <nav>
                 <div id="SimalaRide">
-                    <a href="#"><img src="images/GOPR7596_1572267866439_high.jpg"></a>
+                    <a href="#LetSimalaRide"><img src="images/GOPR7596_1572267866439_high.jpg"></a>
                 </div>
                 <div id="Simala">
                     <a href="#"><img src="images/KUJICAM_2019-10-31-15-34-40_developed.jpg"></a>
@@ -50,6 +50,14 @@
                 <div id="Nest">
                     <a href="#"><img src="images/IMG_20200316_100552.jpg"></a>
                 </div>
+
+                <div id="LetSimalaRide">
+                    <img src="images/GOPR7596_1572267866439_high.jpg">
+                    <h1><p>'Twas brillig, and the slithy toves<br>
+                        Did gyre and gimble in the wabe;<br>
+                    </h1>
+                </div>
+
 
                 
 
