--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Krona One' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Assistant' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Kanit' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Gayathri' rel='stylesheet'>
     <script src="app.js" type="application/javascript"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -27,10 +28,10 @@
                     <a href="#LetSimalaRide"><img src="images/GOPR7596_1572267866439_high.jpg"></a>
                 </div>
                 <div id="Simala">
-                    <a href="#"><img src="images/KUJICAM_2019-10-31-15-34-40_developed.jpg"></a>
+                    <a href="#LetSimala"><img src="images/KUJICAM_2019-10-31-15-34-40_developed.jpg"></a>
                 </div>
                 <div id="House">
-                    <a href="#"><img src="images/received_2500862666657878.jpeg"></a>
+                    <a href="#LetHouse"><img src="images/received_2500862666657878.jpeg"></a>
                 </div>
                 <div id="Favorite">
                     <a href="#"><img src="images/KUJICAM_2020-01-11-18-03-33_developed.jpg"></a>
@@ -53,11 +54,31 @@
 
                 <div id="LetSimalaRide">
                     <img src="images/GOPR7596_1572267866439_high.jpg">
-                    <h1><p>'Twas brillig, and the slithy toves<br>
-                        Did gyre and gimble in the wabe;<br>
+                    <h1><p></p>I miss our Long, Painful, and Gratifying Trips<br>
+                        Because travelling with you is like home in motion<br>
                     </h1>
                 </div>
 
+                <div id="LetSimala">
+                    <img src="images/KUJICAM_2019-10-31-15-34-40_developed.jpg">
+                    <h1><p></p>It was when you first said "I Love You"<br>
+                        How your smile lit up my world<br>
+                    </h1>
+                </div>
+
+                <div id="LetHouse">
+                    <img src="images/received_2500862666657878.jpeg">
+                    <h1><p></p>It was when you first said "I Love You"<br>
+                        How your smile lit up my world<br>
+                    </h1>
+                </div>
+
+                <div id="LetFavorite">
+                    <img src="images/KUJICAM_2020-01-11-18-03-33_developed.jpg">
+                    <h1><p></p>It was when you first said "I Love You"<br>
+                        How your smile lit up my world<br>
+                    </h1>
+                </div>
 
                 
 
