--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href='https://fonts.googleapis.com/css?family=Kanit' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Gayathri' rel='stylesheet'>
     <script src="app.js" type="application/javascript"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <body>
         <header>
@@ -54,7 +54,7 @@
 
                 <div id="LetSimalaRide">
                     <img src="images/GOPR7596_1572267866439_high.jpg">
-                    <h1><p></p>I miss our Long, Painful, and Gratifying Trips<br>
+                    <h1 style="font-size:2vw">I miss our Long, Painful, and Gratifying Trips<br>
                         Because travelling with you is like home in motion<br>
                     </h1>
                 </div>
