--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a href="#LetHouse"><img src="images/received_2500862666657878.jpeg"></a>
                 </div>
                 <div id="Favorite">
-                    <a href="#"><img src="images/KUJICAM_2020-01-11-18-03-33_developed.jpg"></a>
+                    <a href="#LetFavorite"><img src="images/KUJICAM_2020-01-11-18-03-33_developed.jpg"></a>
                 </div>
                 <div id="YourSmile">
                     <a href="#"><img src="images/KUJICAM_2020-01-11-18-05-10_developed.jpg"></a>
@@ -54,7 +54,7 @@
 
                 <div id="LetSimalaRide">
                     <img src="images/GOPR7596_1572267866439_high.jpg">
-                    <h1 style="font-size:2vw">I miss our Long, Painful, and Gratifying Trips<br>
+                    <h1 style="font-size:2.5vw">I miss our Long, Painful, and Gratifying Trips<br>
                         Because travelling with you is like home in motion<br>
                     </h1>
                 </div>
@@ -68,19 +68,30 @@
 
                 <div id="LetHouse">
                     <img src="images/received_2500862666657878.jpeg">
-                    <h1><p></p>It was when you first said "I Love You"<br>
-                        How your smile lit up my world<br>
+                    <h1><p></p>I don't choose my family<br>
+                        God gave them to me as a gift<br>
                     </h1>
                 </div>
 
                 <div id="LetFavorite">
                     <img src="images/KUJICAM_2020-01-11-18-03-33_developed.jpg">
-                    <h1><p></p>It was when you first said "I Love You"<br>
-                        How your smile lit up my world<br>
+                    <h1>I have never stopped thanking God for you
                     </h1>
                 </div>
 
-                
+                <div id="LetMactan">
+                    <img src="images/KUJICAM_2020-01-17-20-42-50_developed.jpg">
+                    <h1><p></p>I just want to make you happy<br>
+                        Because you're the reason that I'm so happy<br>
+                    </h1>
+                </div>
+
+                <div id="LetSinulog">
+                    <img src="images/KUJICAM_2020-01-19-17-29-39_developed.jpg">
+                    <h1><p></p>I just want to make you happy<br>
+                        Because you're the reason that I'm so happy<br>
+                    </h1>
+                </div>
 
             </nav>
             
