--- a/index.html
+++ b/index.html
@@ -93,6 +93,27 @@
                     </h1>
                 </div>
 
+                <div id="LetAsturias">
+                    <img src="images/received_1432017023637168.jpeg">
+                    <h1><p></p>I just want to make you happy<br>
+                        Because you're the reason that I'm so happy<br>
+                    </h1>
+                </div>
+
+                <div id="LetYourSmile">
+                    <img src="images/KUJICAM_2020-01-11-18-05-10_developed.jpg">
+                    <h1><p></p>I just want to make you happy<br>
+                        Because you're the reason that I'm so happy<br>
+                    </h1>
+                </div>
+
+                <div id="LetNest">
+                    <img src="images/IMG_20200316_100552.jpg">
+                    <h1><p></p>I just want to make you happy<br>
+                        Because you're the reason that I'm so happy<br>
+                    </h1>
+                </div>
+
             </nav>
             
 
