--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
                     <a href="#LetFavorite"><img src="images/KUJICAM_2020-01-11-18-03-33_developed.jpg"></a>
                 </div>
                 <div id="YourSmile">
-                    <a href="#"><img src="images/KUJICAM_2020-01-11-18-05-10_developed.jpg"></a>
+                    <a href="#LetYourSmile"><img src="images/KUJICAM_2020-01-11-18-05-10_developed.jpg"></a>
                 </div>
                 <div id="Mactan">
-                    <a href="#"><img src="images/KUJICAM_2020-01-17-20-42-50_developed.jpg"></a>
+                    <a href="#LetMactan"><img src="images/KUJICAM_2020-01-17-20-42-50_developed.jpg"></a>
                 </div>
                 <div id="Sinulog">
-                    <a href="#"><img src="images/KUJICAM_2020-01-19-17-29-39_developed.jpg"></a>
+                    <a href="#LetSinulog"><img src="images/KUJICAM_2020-01-19-17-29-39_developed.jpg"></a>
                 </div>
                 <div id="Asturias">
-                    <a href="#"><img src="images/received_1432017023637168.jpeg"></a>
+                    <a href="#LetAsturias"><img src="images/received_1432017023637168.jpeg"></a>
                 </div>
                 <div id="Nest">
-                    <a href="#"><img src="images/IMG_20200316_100552.jpg"></a>
+                    <a href="#LetNest"><img src="images/IMG_20200316_100552.jpg"></a>
                 </div>
 
                 <div id="LetSimalaRide">
@@ -118,8 +118,23 @@
                         You make me smile <br>
                         You make me laugh <br>
                         You make me blush <br>
+                        Your arms are so comforting <br>
+                        Your smile is so blinding <br>
+                        Your heart is so kind <br>
+                        Your eyes are captivatingly beautiful <br>
+                        Everyday I am grateful <br>
+                        For in your presence, happiness is full <br>
                         It's the way you smile, The way you look at me <br>
                         You make time move so fast without us noticing <br>
+                        I love every moment with you <br>
+                        I know I annoy you always <br>
+                        And thanks for letting me know <br>
+                        Please know you're stuck with me now <br>
+                        I, Blithe Jan Tristen T. Gonzales <br>
+                        Loved you then <br>
+                        Love you still <br>
+                        Always have <br>
+                        and Always will.
 
                     </h1>
                 </div>
