--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header>
             
             <div id="headtitle">
-                <h1><a href="#">Hi Ga, I made this for you, I love you</a></h1>
+                <h1><a href="#You">Hi Ga, I made this for you, I love you</a></h1>
             </div>
         </header>
         
