--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head><link rel="shortcut icon" href="favicon.ico" type="image/x-icon"><title>100</title></head>
+    <head><link rel="shortcut icon" href="favicon.ico" type="image/x-icon"><title>An e love letter to the woman I love</title></head>
     
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
