--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                 </div>
 
                 <div id="You">
+                    <img src="images/IMG_6054.png">
                     <h1>
                         You make my heart melt <br>
                         You make me smile <br>
